tests/ui/cached_ttl_integer_migration.stderr
error: `ttl` now takes a Duration expression (e.g. `ttl = "Duration::from_secs(60)"`); for whole seconds use `ttl_secs = 60`, for milliseconds use `ttl_millis = 500`.
 --> tests/ui/cached_ttl_integer_migration.rs:3:16
  |
3 | #[cached(ttl = 60)]
  |                ^^
